# c_binder_mojo

./: .cursorignore  .gitignore  .gitmodules  CRASH_REPRO.md  CURSOR_NOTES.md  MOJO_PATTERNS.md  README.md  c-binder-mojo-unit-tests.yml  c_binder_mojo.Dockerfile  cli.mojo  docker-compose.yml  docs_entrypoint.mojo  entrypoint.mojo  example_binding_gen.mojo  expierment.mojo  main.mojo  pixi.toml  run_mujoco.sh  scratch.mojo  template_env  test_union_fix.mojo  testout
.cursor/rules/: c-binder-mojo-development.mdc  how-to-code-in-mojo.mdc  how-to-make-a-ast-node-unit-test.mdc  (+3 more)
c_binder_mojo/: ast_node.mojo  ast_node_old.mojo  ast_parser.mojo  base.mojo  binding_gen.mojo  builtin_type_mapper.mojo  c_ast_node.mojo  c_primitives.mojo  clang.mojo  cli.mojo  common.mojo  display_tree.mojo  lib_gen.mojo  minimal_example.mojo  mojo_ast_node.mojo  primitives.mojo  stdlib_ext.mojo  testing.mojo  type_mapper.mojo  typing.mojo
c_binder_mojo_old/: common.mojo
circular_import_test/: pixi.toml  test_circular_imports.mojo
crash_repro/: __init__.mojo  concrete.mojo  node.mojo
docs/: .gitignore  Gemfile  SHARP_EDGES.md  _config.yml  index.markdown  index.md
scripts/: install_mojo_nightly.sh  run-tests.sh  run_c_binding_generation_tests.sh  run_tests.sh  test_file.mojo
tests/: run_tests.sh  simple_nodes_ast.json  some_alias_test.mojo  test_ast_node.mojo  test_c_ast_node.mojo  test_c_ast_nodes_graph.mojo  test_c_ast_nodes_tree.mojo  test_clang.mojo  test_debugg_failure.mojo  test_simple_nodes.mojo  test_stdlib_ext.mojo  test_tree.mojo  test_typing.mojo
tests/integration/test_mujoco_bindings/test_helloworld_cpp/: CMakeLists.txt  hello_world.cpp
tests/test_c_project/: .gitignore  CMakeLists.txt
tests/test_c_project/include/: anonymous_declaration_node.h  complex_structs.h  complex_type_defs.h  complex_unions.h  enum_decl_node.h  example_node.h  field_decl_node.h  record_decl_node.h  rte_mbuf_core.h  simple_type_defs.h  variadic_args_node.h
tests/test_c_project/mojo/: test_anonymous_declaration_node.mojo  test_complex_structs.mojo  test_enum_decl_node.mojo  test_example_node.mojo  test_field_decl_node.mojo  test_json_ast_parser.mojo  test_record_decl_node.mojo  test_simple_type_defs.mojo  test_variadic_args_node.mojo
tests/test_c_project/src/: anonymous_declaration_node.c  complex_structs.c  complex_structs.h  complex_unions.c  enum_decl_node.c  example_node.c  field_decl_node.c  record_decl_node.c  simple_type_defs.c  variadic_args_node.c
(+724 files in other folders)
